[tool.poetry]
name = "sdk-python-demo"
version = "0.1.0"
description = ""
authors = ["yse <hydra_yse@proton.me>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
breez-sdk-liquid = "^0.3.4"
mnemonic = "^0.21"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
